fixed spacing on aside

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ nav {
 #section {
 	float: left;
 	background-color: #ebebeb;
-	width: 463px;
+	width: 454px;
 	margin: 0 0 10px;
 	height: auto;
 
@@ -56,10 +56,15 @@ p {
 	margin: 2px 2px 15px 2px;
 }
 
+img {
+	max-width: 100%;
+}
+
 article {
 	width: 90%;
 	margin: 20px;
 	background-color: #777;
+	padding: 0 15px 5px 15px;
 }
 
 
@@ -67,7 +72,7 @@ aside {
 	float: right;
 	width: 495px;
 	background-color: #ebebeb;
-	padding: 5px 20px 130px 10px;
+	padding: 0 20px 237px 10px;
 	margin: 0 0 10px;
 }
 
